// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`no-sections defaults 1`] = `
"; last modified 1 April 2001 by John Doe

name=John Doe
organization=Acme Widgets Inc.

; use IP address in case network name resolution is not working
server=192.0.2.62

port=143
file="payroll.dat"

# this is another kind of comment

value=
  foo
  bar
  # comment
  baz
"
`;

exports[`no-sections with space around equals 1`] = `
"; last modified 1 April 2001 by John Doe

name = John Doe
organization = Acme Widgets Inc.

; use IP address in case network name resolution is not working
server = 192.0.2.62

port = 143
file = "payroll.dat"

# this is another kind of comment

value =
  foo
  bar
  # comment
  baz
"
`;

exports[`with-sections defaults 1`] = `
"; last modified 1 April 2001 by John Doe

[owner]
name=John Doe
organization=Acme Widgets Inc.

[database]
; use IP address in case network name resolution is not working
server=192.0.2.62
port=143
file="payroll.dat"
# this is another kind of comment

value=
  foo
  bar
  # comment
  baz
"
`;

exports[`with-sections with space around equals 1`] = `
"; last modified 1 April 2001 by John Doe

[owner]
name = John Doe
organization = Acme Widgets Inc.

[database]
; use IP address in case network name resolution is not working
server = 192.0.2.62
port = 143
file = "payroll.dat"
# this is another kind of comment

value =
  foo
  bar
  # comment
  baz
"
`;
